ContactMap: Retry with shorter address when not found
When Evolution's address book map feature can't find an address because e.g. OpenStreetMap Nominatim does not understand the formatting of street / house number, it does not display this contact's address at all.
I reckon it would be better if Evolution would instead restart the search with only less controversial parts of the address, e.g. city and country. On a world map, the difference would not be visible; furthermore, city and country should be easily accessible from the separated address fields of a typical contact entry.
Unfortunately I am not good enough to code this myself but I wanted to bring in this idea for an enhancement. I'm happy to help e.g. in testing.
Edited by Milan Crha