I#1561 - ContactMap: Retry with shorter address when not found

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1561